Performance css update

--- a/html/performance.html
+++ b/html/performance.html
@@ -15,16 +15,20 @@
         <tr>
             <th>Date</th>
             <th>Result</th>
+            <th>Level</th>
             <th>Game</th>
+
         </tr>
         <tr>
             <td>2019</td>
             <td>22</td>
+            <td>21</td>
             <td>Mario</td>
         </tr>
         <tr>
             <td>2020</td>
             <td>23</td>
+            <td>22</td>
             <td>Snake</td>
         </tr>
         <tr>
