--- a/html/performance.html
+++ b/html/performance.html
@@ -6,7 +6,7 @@
 </head>
 <body class="animate-in">
 
-<a class="homeKey" href="home.html">  <   </a>
+<a class="homeKey" href="home.html">  Home   </a>
 
 
 
