Index interface update;

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body class="animate-in">
 
 <form class="index">
-    <a href="html/login.html">Login</a>
-    <a href="html/signup.html">Sign Up</a>
+    <a id="one" href="html/login.html">Login</a>
+    <a id="two" href="html/signup.html">Sign Up</a>
 </form>
 </body>
 
