--- a/html/performance.html
+++ b/html/performance.html
@@ -10,34 +10,43 @@
 
 
 
-    <table class="table">
+    <table class="table" id="performance">
+    <thead>
+    <tr>
+        <th>Date</th>
+        <th>Result</th>
+        <th>Level</th>
+        <th>Game</th>
+        <th width="40"></th>
+    </tr>
+    </thead>
+    <tbody>
 
-        <tr>
-            <th>Date</th>
-            <th>Result</th>
-            <th>Level</th>
-            <th>Game</th>
-        </tr>
-        <tr>
-            <td>2019</td>
-            <td>22</td>
-            <td>21</td>
-            <td>Mario</td>
-        </tr>
-        <tr>
-            <td>2020</td>
-            <td>23</td>
-            <td>22</td>
-            <td>Snake</td>
-        </tr>
-        <tr>
+    </tbody>
+        <!--<tr>-->
+            <!--<td>2019</td>-->
+            <!--<td>22</td>-->
+            <!--<td>21</td>-->
+            <!--<td>Mario</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<td>2020</td>-->
+            <!--<td>23</td>-->
+            <!--<td>22</td>-->
+            <!--<td>Snake</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
 
-        </tr>
-        <tr>
+        <!--</tr>-->
+        <!--<tr>-->
 
-        </tr>
+        <!--</tr>-->
     </table>
 
 </body>
-<script src="../js/script.js"></script>
+
+<script src="../js/lib/jquery/jquery-2.1.3.js"></script>
+
+<script src="../js/performance.js"></script>
+
 </html>
