--- a/html/login.html
+++ b/html/login.html
@@ -6,11 +6,11 @@
 </head>
 <body class="animate-in">
 
-<form class="box" action="post">
+<form class="box" method="post" action="home.html">
     <h1>Login</h1>
         <input type="text" name="" placeholder="Username">
         <input type="password" name="" placeholder="Password">
-        <input type="submit" name="" value="Login">
+        <input href="home.html" type="submit" name="" value="Login">
         <a href="signup.html">New User ?</a>
 </form>
 </body>
