--- a/html/signup.html
+++ b/html/signup.html
@@ -6,7 +6,7 @@
 </head>
 <body class="animate-in">
 
-<form class="box" action="post">
+<form class="box" method="post" action="home.html">
     <h1>Sign Up</h1>
     <input type="text"  placeholder="Username">
     <input type="password"  placeholder="Password">
