Performance looking good.

--- a/html/performance.html
+++ b/html/performance.html
@@ -17,7 +17,7 @@
         <th>Result</th>
         <th>Level</th>
         <th>Game</th>
-        <th width="40"></th>
+        <th width="40px"></th>
     </tr>
     </thead>
     <tbody>
