--- a/html/signup.html
+++ b/html/signup.html
@@ -11,7 +11,7 @@
     <input type="text"  placeholder="Username">
     <input type="password"  placeholder="Password">
     <input type="submit" value="Sign Up">
-    <a href="login.html">Already Have One ?</a>
+    <a href="home.html">Already Have One ?</a>
 </form>
 </body>
 <script src="../js/script.js"></script>
