--- a/html/login.html
+++ b/html/login.html
@@ -15,5 +15,8 @@
 </form>
 </body>
 
-<script src="../js/script.js"></script>
+<script src="../js/lib/jquery/jquery-2.1.3.js"></script>
+
+<script src="../js/performance.js"></script>
+
 </html>
