--- a/html/signup.html
+++ b/html/signup.html
@@ -14,5 +14,9 @@
     <a href="home.html">Already Have One ?</a>
 </form>
 </body>
-<script src="../js/script.js"></script>
+
+<script src="../js/lib/jquery/jquery-2.1.3.js"></script>
+
+<script src="../js/performance.js"></script>
+
 </html>
