--- a/html/home.html
+++ b/html/home.html
@@ -2,15 +2,19 @@
 <html>
 <head>
     <title>Eye</title>
-    <link rel="stylesheet" type="text/css" href="../css/home.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body class="animate-in">
 
-<form class="box" action="post">
-    <h1>Choose Game</h1>
-    <input type="submit" name="" value="Mario">
-    <input type="submit" name="" value="Snake">
-    <input type="submit" name="" value="Sudoku">
+<!--<form class="box" action="post">-->
+    <!--<h1>Choose Game</h1>-->
+    <!--<input type="submit" name="" value="Mario">-->
+    <!--<input type="submit" name="" value="Snake">-->
+    <!--<input type="submit" name="" value="Sudoku">-->
+<!--</form>-->
+
+<form class="index">
+    <a id="two" href="signup.html">Play</a>
 </form>
 
 
