--- a/html/login.html
+++ b/html/login.html
@@ -17,6 +17,6 @@
 
 <script src="../js/lib/jquery/jquery-2.1.3.js"></script>
 
-<script src="../js/performance.js"></script>
+<script src="../js/login.js"></script>
 
 </html>
