--- a/html/signup.html
+++ b/html/signup.html
@@ -8,15 +8,15 @@
 
 <form class="box" method="post" action="home.html">
     <h1>Sign Up</h1>
-    <input type="text"  placeholder="Username">
-    <input type="password"  placeholder="Password">
+    <input type="text" required name="name"  placeholder="Username">
+    <input type="password" required name="password"  placeholder="Password">
     <input type="submit" value="Sign Up">
-    <a href="home.html">Already Have One ?</a>
+    <a href="login.html">Already Have One ?</a>
 </form>
 </body>
 
 <script src="../js/lib/jquery/jquery-2.1.3.js"></script>
 
-<script src="../js/performance.js"></script>
+<script src="../js/signup.js"></script>
 
 </html>
