--- a/html/game.html
+++ b/html/game.html
@@ -6,17 +6,14 @@
     <style>
         body {background:url("../images/tree.jpg") no-repeat center center ;}
         * { padding: 0; margin: 0; }
-        canvas { background: #191919; height: 70%; width: 70%; display: block; margin: 0 auto; position:absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); }
+        canvas { background: #191919;height: 70%; width: 70%;   display: block; margin: 0 auto; position:absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); }
         body, html {height: 100%;}
     </style>
 </head>
 <body>
 
-<canvas id="myCanvas" width="480" height="320"></canvas>
+<canvas id="myCanvas" ></canvas>
 
-<script>
-    
-</script>
-
+<script src="../js/game.js"></script>
 </body>
 </html>
