--- a/html/game.html
+++ b/html/game.html
@@ -12,8 +12,13 @@
 </head>
 <body>
 
-<canvas id="myCanvas" ></canvas>
+<canvas id="myCanvas" >
+    <div><img src="../images/e.png"></div>
+</canvas>
+
+</body>
+
+
 
 <script src="../js/game.js"></script>
-</body>
 </html>
