--- a/html/login.html
+++ b/html/login.html
@@ -8,11 +8,14 @@
 
 <form class="box" method="post" action="home.html">
     <h1>Login</h1>
-        <input type="text" name="" placeholder="Username">
-        <input type="password" name="" placeholder="Password">
+        <input type="text" name="name" placeholder="Username">
+        <input type="password" name="password" placeholder="Password">
         <input href="home.html" type="submit" name="" value="Login">
         <a href="signup.html">New User ?</a>
 </form>
+
+<div id="loginResult" style="display:none;">
+</div>
 <script src="../js/lib/jquery/jquery-2.1.3.js"></script>
 
 <script src="../js/login.js"></script>
