Signup functioneaza perfect. Login la fel, numai ca testeaza daca e corect user-ul numai dupa nume, trebuie sa fac sa testeze si dupa password.

--- a/html/usernameAlreadyTaken.html
+++ b/html/usernameAlreadyTaken.html
@@ -7,14 +7,14 @@
 <body class="animate-in">
 
 <!--<form class="box" action="post">-->
-    <!--<h1>Choose Game</h1>-->
-    <!--<input type="submit" name="" value="Mario">-->
-    <!--<input type="submit" name="" value="Snake">-->
-    <!--<input type="submit" name="" value="Sudoku">-->
+<!--<h1>Choose Game</h1>-->
+<!--<input type="submit" name="" value="Mario">-->
+<!--<input type="submit" name="" value="Snake">-->
+<!--<input type="submit" name="" value="Sudoku">-->
 <!--</form>-->
 
 <form class="index">
-    <a id="two" href="signup.html">Play</a>
+    <a id="two" href="signup.html">Username Is Already Taken. Try again.</a>
 </form>
 
 
