Signup functioneaza perfect. Daca e name already taken se duce la pagina prin care sa reincerci. Login functioneaza perfect: si in functie de nume si de password.

--- a/html/usernameOrPasswordIncorrect.html
+++ b/html/usernameOrPasswordIncorrect.html
@@ -14,7 +14,7 @@
 <!--</form>-->
 
 <form class="index">
-    <a id="two" href="signup.html">Username and/or password incorrect. Try again.</a>
+    <a id="two" href="login.html">Username incorrect. Try again.</a>
 </form>
 
 
