--- a/html/PasswordIncorrect.html
+++ b/html/PasswordIncorrect.html
@@ -7,14 +7,14 @@
 <body class="animate-in">
 
 <!--<form class="box" action="post">-->
-    <!--<h1>Choose Game</h1>-->
-    <!--<input type="submit" name="" value="Mario">-->
-    <!--<input type="submit" name="" value="Snake">-->
-    <!--<input type="submit" name="" value="Sudoku">-->
+<!--<h1>Choose Game</h1>-->
+<!--<input type="submit" name="" value="Mario">-->
+<!--<input type="submit" name="" value="Snake">-->
+<!--<input type="submit" name="" value="Sudoku">-->
 <!--</form>-->
 
 <form class="index">
-    <a id="two" href="home.html">Play</a>
+    <a id="two" href="login.html">Password incorrect. Try again.</a>
 </form>
 
 
