--- a/html/home.html
+++ b/html/home.html
@@ -7,7 +7,7 @@
 <body class="animate-in">
 
 <form class="index">
-    <a id="two" href="home.html">Play</a>
+    <a id="two" href="game.html">Play</a>
 </form>
 
 </body>
