--- a/html/game.html
+++ b/html/game.html
@@ -5,20 +5,22 @@
     <title>Eye</title>
     <style>
         body {background:url("../images/tree.jpg") no-repeat center center ;}
-        * { padding: 0; margin: 0; }
-        canvas { background: #191919;height: 70%; width: 70%;   display: block; margin: 0 auto; position:absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); }
-        body, html {height: 100%;}
+        span {
+            display: inline-block;
+            position: absolute;
+
+        }
     </style>
 </head>
 <body>
 
-<canvas id="myCanvas" >
-    <div><img src="../images/e.png"></div>
-</canvas>
+<div id="container" >
+    <span id="random">E</span>
+</div>
 
-</body>
-
-
+<script src="../js/lib/jquery/jquery-2.1.3.js"></script>
 
 <script src="../js/game.js"></script>
+</body>
+
 </html>
