--- a/html/game.html
+++ b/html/game.html
@@ -10,6 +10,18 @@
             position: absolute;
 
         }
+        .rotate1 {
+            -webkit-transform: rotate(-90deg);
+        }
+        .rotate2 {
+            -webkit-transform: rotate(-180deg);
+        }
+        .rotate3 {
+            -webkit-transform: rotate(-270deg);
+        }
+        .rotate4 {
+            -webkit-transform: rotate(-360deg);
+        }
     </style>
 </head>
 <body>
