--- a/html/game.html
+++ b/html/game.html
@@ -22,6 +22,18 @@
         .rotate4 {
             -webkit-transform: rotate(-360deg);
         }
+        .rotate11 {
+            -webkit-transform: rotate(+90deg);
+        }
+        .rotate22 {
+            -webkit-transform: rotate(+180deg);
+        }
+        .rotate33 {
+            -webkit-transform: rotate(+270deg);
+        }
+        .rotate44 {
+            -webkit-transform: rotate(+360deg);
+        }
     </style>
 </head>
 <body>
