--- a/html/usernameAlreadyTaken.html
+++ b/html/usernameAlreadyTaken.html
@@ -10,5 +10,7 @@
     <a id="two" href="signup.html">Username Is Already Taken. Try again.</a>
 </form>
 </body>
+<script src="../js/lib/jquery/jquery-2.1.3.js"></script>
+<script src="../js/try.js"></script>
 
 </html>
