Absolutely everything works.

--- a/html/description.html
+++ b/html/description.html
@@ -6,7 +6,7 @@
 </head>
 <body class="animate-in">
 
-<a class="homeKey" href="home.html">  Home   </a>
+<a class="homeKey" href="game.html">  Play   </a>
 
 <div class="table" id="performance">
 
